assets/css/main.css
/* ... */
		.image-container {
			position: relative;
		}

		.overlay {
			position: absolute;
			top: 0;
			left: 0;
			height: 100%;
			width: 100%;
			opacity: 0;
			transition: .5s ease;
			background-color: #ACE1BB;
		}
		.image-container:hover .overlay {
			opacity: 0.9;
			cursor: pointer;
		}

		.demo-text {
			color: #919499;
			font-size: 25px;
			position: absolute;
			top: 45%;
			left: 15%;
		}


		.header-overlay {
			position: absolute;
			top: 0;
			left: 0;
			height: 100%;
			width: 100%;
			opacity: 0.9;
			background-color: #282b34;
		}
/* Button */

	input[type="button"],
	input[type="submit"],
	input[type="reset"],
	button,
	.button {
		-moz-transition: all .25s ease-in-out;
		-webkit-transition: all .25s ease-in-out;
		-ms-transition: all .25s ease-in-out;
		transition: all .25s ease-in-out;
		display: inline-block;
		background: #444;
		text-align: center;
		text-transform: uppercase;
		font-weight: 700;
		letter-spacing: 0.25em;
		text-decoration: none;
		border-radius: 0.35em;
		border: 0;
		outline: 0;
		cursor: pointer;
		padding: 0 2.25em 0 2.25em;
		font-size: 0.9em;
		min-width: 12em;
		height: 4em;
		line-height: 4em;
	}

		input[type="button"]:hover,
		input[type="submit"]:hover,
		input[type="reset"]:hover,
		button:hover,
		.button:hover {
			background-color: #282b34;
		}

		input[type="button"].large,
		input[type="submit"].large,
		input[type="reset"].large,
		button.large,
		.button.large {
			font-size: 1em;
			min-width: 14em;
		}

		input[type="button"].style1,
		input[type="submit"].style1,
		input[type="reset"].style1,
		button.style1,
		.button.style1 {
			background: #ACE1BB url("images/overlay.png");
			color: #fff;
		}

			input[type="button"].style1:hover,
			input[type="submit"].style1:hover,
			input[type="reset"].style1:hover,
			button.style1:hover,
			.button.style1:hover {
				background-color: #282b34;
			}

			input[type="button"].style1:active,
			input[type="submit"].style1:active,
			input[type="reset"].style1:active,
			button.style1:active,
			.button.style1:active {
				background-color: #282b34;
			}

		input[type="button"].style2,
		input[type="submit"].style2,
		input[type="reset"].style2,
		button.style2,
		.button.style2 {
			background: none;
			color: #606167;
			box-shadow: inset 0px 0px 2px 0px #a0a1a7;
		}

		.introduction-paragraph {
			color: white; 
			font-size: 18px;
			padding: 40px 10px;
			text-align: center;
			/* float: right; */
		}

			input[type="button"].style2:hover,
			input[type="submit"].style2:hover,
			input[type="reset"].style2:hover,
			button.style2:hover,
			.button.style2:hover {
				box-shadow: inset 0px 0px 2px 0px #606167;
			}

			input[type="button"].style2:active,
			input[type="submit"].style2:active,
			input[type="reset"].style2:active,
			button.style2:active,
			.button.style2:active {
				box-shadow: inset 0px 0px 2px 0px #202127;
			}

		input[type="button"].style3,
		input[type="submit"].style3,
		input[type="reset"].style3,
		button.style3,
		.button.style3 {
			background: #2f333b url("images/overlay.png");
			color: #fff;
		}

			input[type="button"].style3:hover,
			input[type="submit"].style3:hover,
			input[type="reset"].style3:hover,
			button.style3:hover,
			.button.style3:hover {
				background-color: #3f434b;
			}

			input[type="button"].style3:active,
			input[type="submit"].style3:active,
			input[type="reset"].style3:active,
			button.style3:active,
			.button.style3:active {
				background-color: #1f232b;
			}

/* List */

	ul {
		list-style: disc;
		padding-left: 1em;
	}

		ul li {
			padding-left: 0.5em;
		}

		ul.style2 {
			list-style: none;
			padding-left: 0;
		}

			ul.style2 li {
				border-top: solid 1px #eee;
				padding: 1.5em 0 0 0;
				margin: 1.5em 0 0 0;
			}

				ul.style2 li:first-child {
					border-top: 0;
					padding-top: 0;
					margin-top: 0;
				}

		ul.style3 {
			list-style: none;
			padding-left: 0;
		}

			ul.style3 li {
				border-top: solid 1px #eee;
				padding: 0.5em 0 0 0;
				margin: 0.5em 0 0 0;
			}

				ul.style3 li:first-child {
					border-top: 0;
					padding-top: 0;
					margin-top: 0;
				}

	ol {
		list-style: decimal;
		padding-left: 1.25em;
	}

		ol li {
			padding-left: 0.25em;
		}

/* Actions */

	ul.actions {
		list-style: none;
		padding-left: 0;
		margin: 3em 0 0 0;
	}

		ul.actions li {
			display: inline-block;
			margin: 0 0.75em 0 0.75em;
			padding-left: 0;
		}

			ul.actions li:first-child {
				margin-left: 0;
			}

			ul.actions li:last-child {
				margin-right: 0;
			}

		ul.actions.special {
			text-align: center;
		}

/* Feature List */

	.feature-list {
		max-width: 58em;
		margin-left: auto;
		margin-right: auto;
		position: relative;
		top: 0.75em;
	}

		.feature-list section {
			border-top: solid 1px #eee;
			padding-top: 3em;
			padding-left: 5em;
			position: relative;
		}

		@media screen and (min-width: 981px) {

			.feature-list > .row > :nth-child(-n + 2) > section {
				border-top: 0;
				padding-top: 0;
			}

		}

		.feature-list h3 {
			color: #ACE1BB !important;
			margin: -0.35em 0 0.75em 0;
			font-size: 1.15em;
			letter-spacing: 0.05em;
		}

			.feature-list h3:before {
				display: block;
				color: #fff;
				background: #2f333b url("images/overlay.png");
				border-radius: 2.5em;
				text-align: center;
				width: 2.5em;
				height: 2.5em;
				line-height: 2.5em;
				margin-right: 0.75em;
				position: absolute;
				left: 0;
				margin-top: -0.5em;
			}

		.feature-list.small section {
			padding-left: 3.5em;
		}

		.feature-list.small h3:before {
			font-size: 0.8em;
		}

/* Icons */

	.icon {
		text-decoration: none;
	}

		.icon:before {
			display: inline-block;
			font-family: FontAwesome;
			font-size: 1.25em;
			text-decoration: none;
			font-style: normal;
			font-weight: normal;
			line-height: 1;
			-webkit-font-smoothing: antialiased;
			-moz-osx-font-smoothing: grayscale;
		}

		.icon > .label {
			display: none;
		}

/* Box */

	.box header {
		margin: 0 0 1.5em 0;
	}
/* ... */

